# python_learning

./: ReadMe.md  input.txt
fundamentals/basics/class_objects/: company.py  employee.py
fundamentals/basics/conditionals/: rock_paper_scissor.py  roll_dice.py  weather.py
fundamentals/basics/dictionaries/: 2_dimentional_lists.py  contacts.py  dictionary.py  dictionary_of_objects.py  tempCodeRunnerFile.py
fundamentals/basics/exceptions/: exceptions.py
fundamentals/basics/fast_api/: Models.py  ReadMe.md  food_api_example.py  todos_example.py
fundamentals/basics/files/: read_file_example.py  write_file_example.py
fundamentals/basics/files/data/: guido_bio.txt  oceans.txt
fundamentals/basics/files_data/: guido_bio.txt
fundamentals/basics/files_operations/: file_operations.py  temp.py
fundamentals/basics/files_operations/my_files/: input.txt
fundamentals/basics/functions/: dice_game.py  function_return_values.py  greeting.py
fundamentals/basics/inheritance/: robot.py
fundamentals/basics/list_loops/: acronyms.py  range.py  sum_expenses.py
fundamentals/basics/package/: content_management_api.py  http_request_example.py  tempCodeRunnerFile.py
fundamentals/basics/sales_tax_calc/: age_calc.py  tax_calc.py  tempCodeRunnerFile.py
fundamentals/basics/tests/: ReadMe.md  test_circle_area.py
fundamentals/basics/types/: integer.py  strings.py
fundamentals/basics/unit_tests/: circle_area.py  test_circle_area.py
globoticket/: README.md  pyproject.toml  runserver.py
globoticket/globoticket/: api.py  database.py  models.py
