[tool.poetry]
name = "globoticket"
version = "0.1.0"
description = "demo project for learning python api"
authors = ["Girish Tirumalasetti <girish.tirumalasetti.official@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["all"], version = "^0.103.1"}
sqlalchemy = "^2.0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

